--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,7 +7,15 @@ html {
 	& > body {
 		$primary-color: color("primary");
 
-		::placeholder {
+		&.to-be-removed-by-purgecss {
+			font-size: 2rem;
+		}
+
+		form {
+			padding: .5rem;
+		}
+
+		*::placeholder {
 			color: $primary-color;
 		}
 
